Add blog post link

--- a/public/index.html
+++ b/public/index.html
@@ -167,6 +167,12 @@
 
       <h2 id="how-it-works">How it works</h2>
       <p>
+        Full read:
+        <a href="https://thib.me/detecting-wagtail-in-the-wild"
+          >Detecting Wagtail in the wild</a
+        >.
+      </p>
+      <p>
         This uses regular expressions to check whether images on the page match
         a predetermined pattern. Here is a simplified diagram of the logic
         (created with
