Add "laxest" more permissive detection

--- a/public/index.html
+++ b/public/index.html
@@ -135,13 +135,18 @@
           Wagtail with our strictest check.
         </template>
         <template data-code="lax">
-          <strong>That’s likely a Wagtail site.</strong> Or this site is built
-          with another technology which handles images very similarly to
+          <strong>Yes, that’s likely a Wagtail site.</strong> Or this site is
+          built with another technology which handles images very similarly to
+          Wagtail.
+        </template>
+        <template data-code="laxest">
+          <strong>Yes, that could be a Wagtail site.</strong> Or this site is
+          built with another technology which handles images very similarly to
           Wagtail.
         </template>
         <template data-code="nope">
-          <strong>It doesn’t seem to be a Wagtail site.</strong> We can’t really
-          tell for sure, but we couldn’t detect any user-uploaded images
+          <strong>No, this doesn’t seem to be a Wagtail site.</strong> We can’t
+          really tell for sure, but we couldn’t detect any user-uploaded images
           generated with Wagtail on this page.
         </template>
       </div>
