--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
         <a
           href="https://docs.wagtail.org/en/stable/topics/images.html?highlight=renditions"
           >image renditions</a
-        >, so only works if the page contains user-uploaded images.
+        >, and rich text so only works when pages use those features.
       </p>
       <form action="/.netlify/functions/detect" method="GET" class="form">
         <label>
@@ -166,8 +166,9 @@
 
       <p>
         Alternatively, you can also use
-        <a href="https://github.com/AliasIO/wappalyzer">Wappalyzer</a> or
-        <a href="https://whatcms.org/c/Wagtail">WhatCMS.org</a>.
+        <a href="https://www.wappalyzer.com/technologies/cms/">Wappalyzer</a> or
+        <a href="https://whatcms.org/c/Wagtail">WhatCMS.org</a>, or 
+        <a href="https://github.com/thibaudcolas/detect-wagtail">the npm package</a>.
       </p>
 
       <h2 id="how-it-works">How it works</h2>
@@ -205,7 +206,7 @@
     </main>
     <footer>
       <p>
-        © 2020 Thibaud Colas. Powered by
+        © 2020-2025 Thibaud Colas. Site on
         <a href="https://www.netlify.com/">Netlify</a>.
         <a href="https://github.com/thibaudcolas/detect-wagtail">
           Edit on GitHub</a
